one jar for tools / R SOAP frontend design started
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/biocep@130 edb9625f-4e0d-4859-8d74-9fd3b1da38cb